2009-01-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Bump copyright years.
	* aclocal.in (write_aclocal, version): Bump copyright years.
	* automake.in (gen_copyright, version): Likewise.
	* doc/automake.texi: Likewise.

2008-12-29  Chris Pickett  <chris.pickett@mail.mcgill.ca>  (tiny change)

	* doc/automake.texi (LIBOBJS): Clarify overriding of
	`*_DEPENDENCIES'.
	* THANKS: Update.

2008-12-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Revamp semantics for `missing help2man' and manpage distribution.
	Previously, `missing help2man' would create a missing man page
	containing an error message, and exit 1.  This does not play
	well with `make': the next run will see this particular man page
	as being up to date, and will only error out on the next
	generated man page, if any; repeat until all pages are done.
	This patch changes `missing' to exit successfully in this case,
	but `make dist' will ensure that no such man pages are packaged.
	* lib/missing: Exit successfully even if we create a replacement
	page due to missing help2man.
	* automake.in (make_paragraphs): Define %HAVE-MANS% to be true
	if this makefile deals with man pages.
	* lib/am/distdir.am (distdir): If %INSTALL-MAN% and %HAVE-MANS%,
	check that no man page in $(MANS) contains the replacement text
	from `missing'.
	* tests/man4.test: New test.
	* tests/Makefile.am: Update.
	* NEWS: Reorder a bit, update.
	* THANKS: Update.
	Report by Werner Lemberg and Karl Berry.

	Do not use 'global' for makefile-wide settings.
	* doc/automake.texi (Linking, Libtool Flags)
	(Program and Library Variables, Flag Variables Ordering):
	Reword instances of `global variables' that really mean
	makefile-wide ones.
	* THANKS: Update.
	Report by Andreas Bergmeier.

	Fix config.status depfiles failure.
	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Commands are
	again a single shell brace group, so they are correctly skipped
	when dependencies are turned off.  The failure is noisy with
	ksh only.